IMP-9 fix: adjusted the alignment of the product and title

--- a/src/components/product-cards/product-card-7/styles/card.css
+++ b/src/components/product-cards/product-card-7/styles/card.css
@@ -23,12 +23,17 @@
   letter-spacing: 3px;
   text-transform: uppercase;
 }
-.Grid {
+/* .Grid {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
   width: 80%;
   height: 350px;
   margin: 0;
-}
+} */
 .Grid:hover {
   background-color: #fcfcfc;
   color: #e3364e;
@@ -71,6 +76,12 @@
   background-color: #e3364e;
 }
 
+.product-title{
+  display: flex;
+  justify-content: center;
+  margin-left: 100%;
+} 
+
 @media screen and (min-width: 430px) and (max-width: 680px) {
   .btn-products {
     font-size: 10px;
@@ -79,10 +90,37 @@
   }
 }
 
-@media screen and (min-width: 330px) and (max-width: 429px) {
+@media screen and (min-width: 329px) and (max-width: 429px) {
   .btn-products {
     font-size: 5px;
     font-weight: 600;
   }
  
 }
+
+@media screen and (min-width: 330px) and (max-width : 700px)  {
+  .outergrid{
+    padding-left: 15%;
+  }
+  .pname {
+    margin-right: 30px;
+   }
+   .product-title {
+    width: 100%;
+    margin-left: 50%;
+   }
+
+} 
+@media screen and (min-width: 1024px) and (max-width: 1366) {
+  .product-title {
+      margin-left: 90px;
+      margin-top: -20px;
+  }
+  
+}
+
+
+ .content{
+  display: flex;
+  justify-content: center;
+} 
